--- a/config/locales/en.yml
+++ b/config/locales/en.yml
@@ -20,4 +20,13 @@
 # available at http://guides.rubyonrails.org/i18n.html.
 
 en:
-  hello: "Hello world"
+  flash:
+  actions:
+    create:
+      notice: "%{resource_name} was successfully created."
+    update:
+      notice: "%{resource_name} was successfully updated."
+    destroy:
+      notice: "%{resource_name} was successfully destroyed."
+      alert: "%{resource_name} could not be destroyed."
+
