--- a/config/locales/en.yml
+++ b/config/locales/en.yml
@@ -34,5 +34,5 @@ en:
    default: 'You cannot perform this action.'
    post_policy:
      update?: 'You cannot edit this post!'
-     create?: 'You cannot create posts!'
+     create?: 'You can create posts only in your own blog!'
 
